# htmxango

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  manage.py  pyproject.toml
.github/workflows/: tests.yml
htmxango/: asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html  index.html
templates/todos/: todoitem_list.html
todos/: admin.py  forms.py  models.py  urls.py  views.py
todos/migrations/: 0001_initial.py  0002_alter_todoitem_options.py
todos/tests/: test_view_helper.py  test_views.py
todos/tests/templates/: test.tpl.html
