[project]
name = "htmxango"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django-crispy-forms>=2.3",
    "django>=5.1.3",
    "django-htmx>=1.21.0",
    "crispy-bootstrap5>=2024.10",
    "django-render-block>=0.10",
]

[dependency-groups]
dev = [
    "djlint>=1.36.1",
    "ipdb>=0.13.13",
    "ipython>=8.29.0",
    "pre-commit>=4.0.1",
    "ruff>=0.7.4",
]


[tool.djlint]
blank_line_after_tag = "load,extends,include"
extend_exclude = "generated_docs"
format_css = false
profile = "django"
use_gitignore = true
ignore = "H025,H021"

[tool.ruff]
# Same as Black.
line-length = 88
# Assume Python 3.11.
target-version = "py311"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "B",
    "C4",
    "EXE",
    "ISC",
    "ICN",
    "INP",
    "PIE",
    "SIM",
    "W",
    "T20",
    "UP",
    "T10",
    "G",
    "DJ001",
    "DJ008",
    "C90",
    "ERA",
]
# Later on might be useful C/C90 (Compexity), ERA (Found commented-out code), FBT
ignore = ["B008", "SIM102", "ISC001"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = [
    "F",
    "E",
    "B",
    "C4",
    "EXE",
    "ISC",
    "ICN",
    "INP",
    "PIE",
    "SIM",
    "W",
    "T20",
    "UP",
]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".git",
    ".mypy_cache",
    ".pre-commit-cache",
    ".ruff_cache",
    ".tox",
    ".venv",
    "venv",
    "docs",
    "__pycache",
    "**/migrations/*",
]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10
